updated for zchen website

--- a/_posts/2016-10-25-newblogs.md
+++ b/_posts/2016-10-25-newblogs.md
@@ -1,9 +1,8 @@
 ---
 layout: category-post
-title:  "New Blogs"
+title:  "How to setup website with Github pages"
 date:   2016-10-25
 categories: writing
 ---
 
-This is a my shiny new blog for testing. Blog is just yet another way
-of writing things. Although old style, it involves a lot of thinking! 
+Document how to setup a personal website like this. 
